<resources>
    <string name="app_name">Dulcekat</string>
    <string name="slogan"> ¡Endulza tu día!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_sign_in_tittle">Inicia sesión</string>
    <string name="btn_sign_up_tittle">¡Regístrate!</string>
    <string name="tittle_signUp">Regístrate</string>
    <string name="hint_username">Nombre completo</string>
    <string name="hint_surname">Apellidos</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_signIn_tittle">Inicia sesión</string>
    <string name="lbl_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="lbl_from_register_to_question">¿Ya tienes una cuenta?</string>
    <string name="lbl_from_register_to_answer">Inicia sesión</string>
    <string name="lbl_from_logIn_to_question">¿Aún no tienes una cuenta?</string>
    <string name="lbl_from_logIn_to_answer">Regístrate aquí!</string>
    <string name="forgot_password_message">¡No se preocupe! Simplemente escriba su correo electrónico y nosotros le enviaremos un enlace para reestablecer su contraseña</string>
    <string name="btn_recoverPass_tittle">Reestablecer contraseña</string>
    <string name="tittle_signIn">Inicia sesión</string>
    <string name="error_username">"Ingrese un nombre"</string>
    <string name="error_surname">"Ingrese un apellido"</string>
    <string name="error_phone">"Ingrese un número telefónico"</string>
    <string name="error_invalid_phone">"Ingrese un número telefónico valido"</string>
    <string name="error_phone_size">"El número debe tener 9 digitos"</string>
    <string name="error_email">"Hmm, ese correo no se ve bien"</string>
    <string name="error_password">"La contraseña debe tener almenos 6 digitos"</string>
    <string name="error_user_not_found">La dirección de correo electronico no ha sido registrado</string>
    <string name="error_user_disable">Esta cuenta se encuentra temporalmente deshabilitado</string>
    <string name="error_wrong_password">Contraseña incorrecta, vuelva a intentar</string>
    <string name="error_email_already_in_use">La dirección de correo electrónico ya ha sido registrado</string>
    <string name="error_invalid_email">La dirección de correo electrónico está mal formateada</string>
    <string name="error_missing_email">Se debe proporcionar una dirección de correo electrónico</string>
    <string name="color_Brown_Sugar">#A96743</string>
    <string name="color_Gray_Web">#808080</string>
    <string name="menuHome">Inicio</string>
    <string name="menuProfile">Perfil</string>
    <string name="menuFavorite">Mis favoritos</string>
    <string name="menuBag">Mi bolsa</string>
    <string name="others">Otros</string>
    <string name="menuContactUs">Contáctanos</string>
    <string name="menuAboutUs">Nosotros</string>
    <string name="menuSignOut">Cerrar Sesión</string>
    <string name="title_header">Hola!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="default_favorites_menu">Favoritos</string>
    <string name="default_bag_menu">Bolsa</string>
    <string name="title_category">Categorías</string>
    <string name="default_text">default</string>
    <string name="title_some_products">Algunos productos</string>
    <string name="title_offers">Ofertas</string>
    <string name="search_message">¿Qué estás buscando?</string>
    <string name="contact_us_title">Contáctanos</string>
    <string name="about_us_title">Nosotros</string>
    <string name="title_card_message_contact_us">Envíanos un mensaje y te estaremos respondiendo lo más pronto posible.</string>
    <string name="btn_send_message">Enviar</string>
    <string name="tv_description_aboutus">Dulcekat es una pequeña empresa liderada por la Srta. Katherine Del Rosario Inga Mendoza y ubicada en el Centro Comercial Plaza Villa Sur. Esta Empresa tiene como objetivo brindrar la mejor atención al cliente dandole productos de muy buena calidad a precios accesibles para todo aquel que guste de endulzar la vida.</string>
    <string name="tv_follow_us">Siguenos en</string>
    <string name="products_title">Productos</string>
    <string name="tab_title_insumos">Insumos</string>
    <string name="tab_title_accesorios">Accesorios</string>
    <string name="tab_title_confiteria">Confitería</string>
    <string name="tab_title_decorativos">Decorativos</string>
    <string name="separate">- - - - - - - - - - - - - - - - - - - - - - --</string>
    <string name="login_with_google">Inicia con Google</string>

    <!--Google client id-->
    <string name="webclient_id">494605701384-5bhsq74ga1bumrk850njpimm6tuos1h6.apps.googleusercontent.com</string>

    <!-- Facebook client -->
    <string name="facebook_app_id">1384109932413104</string>
    <string name="fb_login_protocol_scheme">fb1384109932413104</string>
    <string name="facebook_client_token">72216ea5e09afa2ff029f8c93a7ee7af</string>


</resources>
