<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_outline"
            android:title="@string/menuHome"/>

        <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_wishlist_outline"
            android:title="@string/menuFavorite"/>

        <item
            android:id="@+id/navigation_bag"
            android:icon="@drawable/ic_bag_outline"
            android:title="@string/menuBag"/>

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile_outline"
            android:title="@string/menuProfile"/>

    </group>
    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="single">
            <item
            android:id="@+id/navigation_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menuContactUs"/>

            <item
                android:id="@+id/navigation_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/menuAboutUs"/>

            </group>
        </menu>

    </item>


</menu>