<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.modules.aboutus.AboutUsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/appbar_support_aboutUs"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="@color/color_Uranian_Blue"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back_about_us"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/background_button_back"
                android:src="@drawable/ic_button_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/about_us_title"
            android:textSize="24sp"
            android:textColor="@color/color_White"
            android:fontFamily="@font/googlesans_bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/height_wave"
        android:background="@drawable/main_wave_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_support_aboutUs" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_dk_img_contactUs"
        android:layout_width="@dimen/size_logo"
        android:layout_height="@dimen/size_logo"
        android:layout_marginTop="170dp"
        android:layout_marginRight="@dimen/marginRight_logo"
        android:src="@drawable/logo_dk_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_app_name_contactUs"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textSize="46sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_dk_img_contactUs"
        style="@style/TittleFragments"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description_about_us"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/tv_description_aboutus"
        android:textSize="14sp"
        android:textAlignment="center"
        android:fontFamily="@font/googlesans_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name_contactUs"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_followUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/tv_follow_us"
        android:textSize="14sp"
        android:fontFamily="@font/googlesans_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_fu_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:src="@drawable/ic_facebook"
        app:layout_constraintLeft_toLeftOf="@id/title_followUs"
        app:layout_constraintTop_toBottomOf="@id/title_followUs"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_fu_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="6dp"
        android:src="@drawable/ic_instagram"
        app:layout_constraintRight_toRightOf="@id/title_followUs"
        app:layout_constraintTop_toBottomOf="@id/title_followUs"/>


</androidx.constraintlayout.widget.ConstraintLayout>