<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        tools:context=".ui.fragments.home.HomeFragment">

        <View
            android:id="@+id/view_search_support"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background_search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            app:cardCornerRadius="10dp"
            android:elevation="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchView_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_search"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_message"
                    android:textSize="14dp"
                    android:fontFamily="@font/googlesans_regular"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_category"
            android:textSize="20sp"
            android:fontFamily="@font/googlesans_bold"
            app:layout_constraintTop_toBottomOf="@id/view_search_support"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:overScrollMode="never"
            app:layout_constraintLeft_toLeftOf="@id/title_category"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_category" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_offers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_offers"
            android:textSize="20sp"
            android:fontFamily="@font/googlesans_bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_list_category"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/banner_offers"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:layout_constraintLeft_toLeftOf="@id/title_offers"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_offers" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_some_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_some_products"
            android:textSize="20sp"
            android:fontFamily="@font/googlesans_bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner_offers"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="Ver Todos"
            android:textStyle="bold"
            android:textColor="@color/color_Uranian_Blue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_some_products"
            app:layout_constraintBottom_toBottomOf="@id/title_some_products"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintLeft_toLeftOf="@id/title_some_products"
            app:layout_constraintTop_toBottomOf="@id/title_some_products"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>