<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_recover_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        app:cardBackgroundColor="@color/color_Uranian_Blue"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp"
        tools:viewBindingIgnore="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_message_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="74dp"
                android:layout_marginRight="22dp"
                android:fontFamily="@font/googlesans_regular"
                android:text="@string/forgot_password_message"
                android:textColor="@color/color_White"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:viewBindingIgnore="true"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cet_email_recover_password"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="36dp"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/lbl_message_forgot_password"
                app:layout_constraintRight_toRightOf="@id/lbl_message_forgot_password"
                app:layout_constraintTop_toBottomOf="@id/lbl_message_forgot_password"
                style="@style/ContentInputEditText"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_recover_password"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    style="@style/InputEditText"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/width_imgRecoverPass"
        android:layout_height="@dimen/height_imgRecoverPass"
        android:layout_marginTop="12dp"
        android:elevation="6dp"
        android:src="@drawable/recover_password"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="@id/card_recover_container"
        app:layout_constraintRight_toRightOf="@id/card_recover_container"
        app:layout_constraintTop_toTopOf="parent"
        tools:viewBindingIgnore="true" />

    <View
        android:id="@+id/view_btnRecover_support"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/card_recover_container"
        app:layout_constraintLeft_toLeftOf="@id/card_recover_container"
        app:layout_constraintRight_toRightOf="@id/card_recover_container"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_restore_password"
        android:text="@string/btn_recoverPass_tittle"
        app:layout_constraintBottom_toBottomOf="@id/view_btnRecover_support"
        app:layout_constraintLeft_toLeftOf="@id/view_btnRecover_support"
        app:layout_constraintRight_toRightOf="@id/view_btnRecover_support"
        app:layout_constraintTop_toTopOf="@id/view_btnRecover_support"
        style="@style/ButtonCorner"
        />

    <ProgressBar
        android:id="@+id/progressBar_restorePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/view_btnRecover_support"
        app:layout_constraintRight_toRightOf="@id/view_btnRecover_support"
        app:layout_constraintTop_toTopOf="@id/view_btnRecover_support"
        app:layout_constraintBottom_toBottomOf="@id/view_btnRecover_support"
        android:visibility="gone"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_recover_container"
        />

</androidx.constraintlayout.widget.ConstraintLayout>